link survives the restart now

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=urlShortner
+# Save data to a file named 'linkDB'
+spring.datasource.url=jdbc:h2:file:./data/linkDB
+
+# Login settings
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Keep data after restart
+spring.jpa.hibernate.ddl-auto=update
